<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.naiaraodiaga.calculadora.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton7"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton8"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton9"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressOperador"
            android:text="@string/botonMas"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton4"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton5"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton6"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressOperador"
            android:text="@string/botonMenos"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton1"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton2"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton3"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressOperador"
            android:text="@string/botonMult"
            android:textColor="@color/White" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/botonComa"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressDigito"
            android:text="@string/boton0"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressBorrar"
            android:text="@string/botonDel"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/button16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="pressOperador"
            android:text="@string/botonDiv"
            android:textColor="@color/White" />

    </LinearLayout>

    <Button
        android:id="@+id/button17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="pressIgual"
        android:text="@string/botonIgual"
        android:textColor="@color/White" />

</LinearLayout>
